style.css
/* external style sheet */
body {
    background-color: rgb(209, 209, 209);
    margin-top: -100px;
    margin: 0px;
}



header {
    background-color: rgb(255, 255, 218);
    border-right: 20px solid rgb(209, 209, 20);;
    position: fixed;
    height: 160px;
    width: 100%;
}
#headeritems {
    display: flex;
}
#logopic {
    height: 60px;
    width: 200px;
}

#searchbar {
    margin-top: 127px;
    margin-bottom: 8px;
    margin-left: auto;
    margin-right: 8px;
    text-align: left;
}

/* #page color set */
main {
    background-color: rgb(255, 79, 79);
    padding-top: 160px;
}

menu {
    background-color: rgb(255, 255, 218);
    height: 100%;
    width: 200px;
    position: fixed;
    margin-top: 0px;
    margin-left: 0px;
    text-align: right;
    font-size: 12pt;
    padding-right: 20px;
    padding-left: 0px;
    padding-right: 0px;
}

.menu_list {
    padding: 10px;
}

.menu_title {
    border-top: 2px solid black;
    border-bottom: 2px solid black;
    padding-top: 5px;
    padding-bottom: 5px;
    margin-left: 80px;
    margin-bottom: 10px;
    font-size: 13pt;
}

#signup {
    background-color: rgb(255, 165, 0);
    margin: 20px;
    border: 2px solid rgb(235, 135, 0);
    border-radius: 10px;    
    padding: 15px;
    text-align: center;
}

#sign_in {
    background-color: rgb(255, 255, 157);
    border: 2px solid rgb(225, 225, 127);
    margin: 20px;       
    padding: 10px;
    border-radius: 10px;
    text-align: center;
}

article {
    margin-left: 200px;
    border-left: 1px solid black;    
}

section {
    border-top: 1px solid black;    
}

#keymessage {
    background-color: white;
    height: 65px;
    text-align: center;
    font-size: 15pt;
    line-height: 65px;
}

h2 {
    background-color: rgb(255, 255, 218);
    width: 120px;
    text-align: left;
    margin-right: auto;
    margin-left: 8px;
    margin-top: 8px;
    margin-bottom: auto;
    padding-bottom: 5px;
    padding-top: 5px;
    padding-left: 10px;
    padding-right: 50px;
    border-radius: 4px;
    font-size: 25px;
    border: 1px solid black;
}

hr {
    border: 1px solid black;
    padding: 1px;
}

.picrow {
    display: flex;
    padding-right: 4px;
    padding-left: 4px;

}

/* #page color set */
.featured_image_set {
    margin: auto;
    width: 33.3333%;
    padding: 4px;
    background-color:  rgb(255, 79, 79);
}

/* #page color set */

.for-you_image_set {
    margin: auto;
    width: 33.3333%;
    padding: 4px;
    background-color: rgb(255, 79, 79);    
}

img {
    width: 100%;
}

nav {
    margin-top: 290px;
}
footer {
    width: 200px;
}

